--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/visualizer.css" />
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -22,14 +23,10 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-
-        <div id="viz" style="width: 100%; height: 100%;">.</div>
-
-
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="js/vendor/leap.min.js"></script>
-        <script src="js/vendor/raphael-min.js"></script>
+        <script src="js/vendor/three.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
     </body>
